[package]
name = "rs-shell"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.11"
signal-hook = "0.3.17"
regex = "1.10.2"
open = "5.0.1"
simple_logger = "4.3.0"
log = "0.4.20"
ctrlc = "3.4.1"
clap = { version = "4.4.11", features = ["derive"] }
ntapi = "0.4.1"
winapi = "0.3.9"
time = "0.3.36"

actix-web = { version = "4.9.0", features = ["rustls-0_22"] }
rustls = "0.22.4"
rustls-pemfile = "2.1.3"
actix-files = "0.6.6"
actix-multipart = "0.7.2"

reqwest = { version = "0.12.7", features = ["blocking", "rustls-tls", "multipart"] }

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Kernel",
    "Wdk_System_Threading",
    "Win32_Networking_WinInet",
    "Win32_Networking_WinHttp"
]

[target.'cfg(target_os = "windows")'.dependencies]
syscalls = { git = "https://github.com/BlWasp/syscalls-rs.git", branch = "main",  features = ["_INDIRECT_"] }