[package]
name = "rs-shell"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.14"
signal-hook = "0.3.18"
regex = "1.12.2"
open = "5.3.3"
simple_logger = "5.1.0"
log = "0.4.28"
ctrlc = "3.5.1"
clap = { version = "4.5.53", features = ["derive"] }
ntapi = "0.4.1"
winapi = "0.3.9"
time = "0.3.44"

actix-web = { version = "4.12.0", features = ["rustls-0_22"] }
rustls = "0.22.4" # Do not upgrade for the moment, building errors with cmake starting at 0.23.0
rustls-pemfile = "2.2.0"
actix-files = "0.6.8"
actix-multipart = "0.7.2"

reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls", "multipart"] }

[dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Kernel",
    "Wdk_System_Threading",
    "Win32_Networking_WinInet",
    "Win32_Networking_WinHttp"
]

[target.'cfg(target_os = "windows")'.dependencies]
syscalls = { git = "https://github.com/BlWasp/syscalls-rs.git", branch = "main",  features = ["_INDIRECT_"] }